# bioagent-project

./: .env.example  .gitignore  BIOAGENT_ROADMAP.md  CHANGELOG.md  CLAUDE.md  LICENSE  PHASE2.md  PHASE2_API_UNIFICATION.md  PHASE2_SUMMARY.md  README.md  pyproject.toml  test.txt  test_agent_tools.py  test_biomni_direct.py  test_biomni_integration.py  test_domain_management.py  test_with_api_key.py
.claude/: settings.local.json
.sessions/ebbea6f3e992/: session.json
.tasks/: db63befe-f48e-4461-b543-cc6738ad3dbd.json
.transcripts/: transcript_1773762291.jsonl
bioagent/: __init__.py  agent.py  cli.py  config.py  llm.py  state.py
bioagent/agents/: __init__.py  analyzer.py  factory.py  team.py
bioagent/background/: __init__.py  capture.py  manager.py
bioagent/context/: __init__.py  compressors.py  manager.py
bioagent/evolution/: __init__.py  checkpoint.py  engine.py  evaluator.py  grid.py  models.py  strategies.py  tools.py
bioagent/observability/: __init__.py  cost_tracker.py  logger.py  metrics.py
bioagent/prompts/: __init__.py  system_prompt.md
bioagent/tasks/: __init__.py  manager.py  models.py  todo.py
bioagent/team/: __init__.py  autonomous.py  discovery.py  kanban.py  protocol.py
bioagent/tools/: __init__.py  adapter.py  base.py  loader.py  registry.py
bioagent/tools/core/: __init__.py  analysis.py  background.py  compact.py  files.py  (+3 more)
bioagent/web/: __init__.py  cli.py  server.py  test_page.html
bioagent/worktree/: __init__.py  coordinator.py  manager.py  models.py
docs/: GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  PROGRESS_CHECKLIST.md  PROJECT_REQUIREMENTS.md  README.md  evolution.md
examples/: basic_usage.py  phase2_demo.py
scripts/: run_bioagent.py  run_clean.py  test_bioagent.py  test_glm_setup.py  test_phase10_evolution.py  test_phase2_fixed.py  test_phase2_questions.py  test_phase2_unified.py  test_phase5_background.py  test_phase5_real.py  test_phase6_context.py  test_phase7_team.py  test_phase8_worktree.py  test_phase9_web.py
tests/: test_phase2.py  test_tools.py
